--- a/Docs/UserGuide/tradedata/swaption.tex
+++ b/Docs/UserGuide/tradedata/swaption.tex
@@ -1,4 +1,5 @@
 \subsubsection{Swaption}
+\label{ss:swaption} 
 
 The \lstinline!SwaptionData!  node is the trade data container for the \emph{Swaption} trade type. The \lstinline!SwaptionData!
 node has one and exactly one \lstinline!OptionData! trade component sub-node, and at least one \lstinline!LegData! trade
@@ -69,27 +70,27 @@ The structure of an example \lstinline!SwaptionData!  node of a European swaptio
   \label{tab:swaption_requirements}
 \end{table}
 
-The OptionData trade component sub-node is outlined in section \ref{ss:option_data}. 
+The \lstinline!OptionData! trade component sub-node is outlined in section \ref{ss:option_data}. 
 The relevant fields in the \lstinline!OptionData! node for a Swaption are:
 
 \begin{itemize}
-\item \lstinline!LongShort! The allowable values are \emph{Long} or \emph{Short}. Note that the payer and receiver legs in the underlying swap are always from the perspective of the party that is \emph{Long}. E.g. for a \emph{Short} swaption with a fixed leg where the Payer flag is set to \emph{false}, it means that the counterparty receives the fixed flows.  
+\item \lstinline!LongShort!: The allowable values are \emph{Long} or \emph{Short}. Note that the payer and receiver legs in the underlying swap are always from the perspective of the party that is \emph{Long}. E.g. for a \emph{Short} swaption with a fixed leg where the Payer flag is set to \emph{false}, it means that the counterparty receives the fixed flows.  
 
-\item \lstinline!OptionType![Optional] This flag is optional for swaptions, and even if set, has no impact. Whether a swaption is a payer or receiver swaption is determined by the Payer flags on the legs of the underlying swap.
+\item \lstinline!OptionType![Optional]: This flag is optional for swaptions, and even if set, has no impact. Whether a swaption is a payer or receiver swaption is determined by the Payer flags on the legs of the underlying swap.
 
-\item  \lstinline!Style! The allowable values are \emph{European} or \emph{Bermudan}.
+\item  \lstinline!Style!: The exercise style of the Swaption. The allowable values are \emph{European} or \emph{Bermudan}.
 
 \item \lstinline!NoticePeriod![Optional]: The notice period defining the date (relative to the exercise date) on which the exercise
   decision has to be taken. If not given the notice period defaults to \emph{0D}, i.e. the notice date is identical to the
   exercise date. Allowable values: A number followed by \emph{D, W, M, or Y}
 
 \item \lstinline!NoticeCalendar![Optional]: The calendar used to compute the notice date from the exercise date. If not given
-  defaults to the \emph{NullCalendar} (no holidays, weekends are no holidays either). Allowable values: See Table \ref{tab:calendar} Calendar.
+  defaults to the \emph{NullCalendar} (no holidays, weekends are no holidays either). Allowable values: See Table \ref{tab:calendar} \lstinline!Calendar!.
 
 \item \lstinline!NoticeConvention![Optional]: The convention used to compute the notice date from the exercise date. Defaults to
   \emph{Unadjusted} if not given. Allowable values: See \lstinline!Roll Convention! in Table \ref{tab:allow_stand_data}.
 
-\item  \lstinline!Settlement! Delivery Type. The allowable values are \emph{Cash} or \emph{Physical}.
+\item  \lstinline!Settlement!: Delivery Type. The allowable values are \emph{Cash} or \emph{Physical}.
 
 \item \lstinline!SettlementMethod![Optional]: Specifies the method to calculate the settlement amount for Swaptions and CallableSwaps. Allowable values: \emph{PhysicalOTC}, \emph{PhysicalCleared}, \emph{CollateralizedCashPrice}, \emph{ParYieldCurve}. Defaults to \emph{ParYieldCurve} if Settlement is \emph{Cash} and defaults to \emph{PhysicalOTC} if Settlement is \emph{Physical}.
 
@@ -98,9 +99,43 @@ The relevant fields in the \lstinline!OptionData! node for a Swaption are:
 \emph{CollateralizedCashPrice} = Cash settled swaptions with settlement price calculation using zero coupon curve discounting \\
 \emph{ParYieldCurve}  = Cash settled swaptions with settlement price calculation using par yield discounting \footnote{https://www.isda.org/book/2006-isda-definitions/} \footnote{https://www.isda.org/a/TlAEE/Supplement-No-58-to-ISDA-2006-Definitions.pdf} \\
 
-\item An \lstinline!ExerciseDates! node where exactly one ExerciseDate date element must be given for \emph{European} style swaptions, and for \emph{Bermudan} style swaptions  at least two ExerciseDate date elements must be given. \\
+\item \lstinline!ExerciseFees![Optional]: This node contains child elements of type \lstinline!ExerciseFee!. Similar to a list of notionals
+  (see \ref{ss:leg_data}) the fees can be given either
 
-\item Optional \lstinline!PremiumAmount!,  \lstinline!PremiumCurrency!, and \lstinline!PremiumPayDate! fields to specify the Swaption premium. 
+  \begin{itemize}
+  \item as a list where each entry corresponds to an exercise date and the last entry is used for all remaining exercise
+    dates if there are more exercise dates than exercise fee entries, or
+  \item using the \verb+startDate+ attribute to specify a change in a fee from a certain day on (w.r.t. the exercise
+    date schedule)
+  \end{itemize}
+
+  Fees can either be given as an absolute amount or relative to the current notional of the period immediately following
+  the exercise date using the \verb+type+ attribute together with specifiers \verb+Absolute+ resp. \verb+Percentage+. If
+  not given, the type defaults to \verb+Absolute+.
+
+  If a fee is given as a positive number the option holder has to pay a corresponding amount if they exercise the
+  option. If the fee is negative on the other hand, the option holder receives an amount on the option exercise.
+
+  Only supported for Swaptions and Callable Swaps currently.
+
+\item \lstinline!ExerciseFeeSettlementPeriod![Optional]: The settlement lag for exercise fee payments. Defaults to 0D if not
+  given. This lag is relative to the exercise date (as opposed to the notice date). Allowable values: A number followed by \emph{D, W, M, or Y}
+
+\item \lstinline!ExerciseFeeSettlementCalendar![Optional]: The calendar used to compute the exercise fee settlement date from the
+  exercise date. If not given defaults to the \emph{NullCalendar} (no holidays, weekends are no holidays either). Allowable values: See Table \ref{tab:calendar} Calendar.
+
+\item \lstinline!ExerciseFeeSettlementConvention![Optional]: The convention used to compute the exercise fee settlement date from
+  the exercise date. Defaults to \emph{Unadjusted} if not given. Allowable values: See \lstinline!Roll Convention! in Table \ref{tab:allow_stand_data}.
+
+\item An \lstinline!ExerciseDates! node where exactly one \lstinline!ExerciseDate! date element must be given for \emph{European} style swaptions, and for \emph{Bermudan} style swaptions  at least two \lstinline!ExerciseDate! date elements must be given. \\
+
+\item \lstinline!PremiumAmount![Optional]: Option premium amount paid by the swaption buyer to the swaption seller. Allowable values:  Any positive real number.
+
+\item \lstinline!PremiumCurrency![Optional]: Currency of the swaption premium. Allowable values:  See \lstinline!Currency! in Table \ref{tab:allow_stand_data}.
+
+\item \lstinline!PremiumPayDate![Optional]: Date of the swaption premium payment. Allowable values:  See \lstinline!Date! in Table \ref{tab:allow_stand_data}.
+
+%\item Optional \lstinline!PremiumAmount!,  \lstinline!PremiumCurrency!, and \lstinline!PremiumPayDate! fields to specify the Swaption premium. 
 
 \end{itemize}
 
