--- a/Docs/UserGuide/allowablevalues.tex
+++ b/Docs/UserGuide/allowablevalues.tex
@@ -146,7 +146,7 @@
     \emph{A364, Actual/364, Act/364, ACT/364}& Actual 364  \\ \hline
     \emph{Actual/365 (No Leap), Act/365 (NL), NL/365, Actual/365 (JGB)} & Actual 365 Fixed (No Leap Year)\\ \hline
     \emph{T360 ,30/360, 30/360 (Bond Basis), ACT/nACT} & Thirty 360 (US) \\ \hline
-    \emph{30E/360 (Eurobond Basis)", 30E/360", 30E/360.ISDA"} & Thirty 360 (European) \\ \hline
+    \emph{30E/360 (Eurobond Basis), 30E/360, 30E/360.ISDA} & Thirty 360 (European) \\ \hline
     \emph{30/360 (Italian)} & Thirty 360 (Italian) \\ \hline
     \emph{ActActISDA, ACT/ACT.ISDA, Actual/Actual (ISDA), ActualActual (ISDA), ACT/ACT, ACT} & Actual Actual (ISDA) \\ \hline
     \emph{ActActISMA, Actual/Actual (ISMA), ActualActual (ISMA), ACT/ACT.ISMA} & Actual Actual (ISMA) \\ \hline
