added commodities to marketdata in the userguide

--- a/Docs/UserGuide/userguide.tex
+++ b/Docs/UserGuide/userguide.tex
@@ -30,6 +30,7 @@
 \usepackage{epstopdf}
 \usepackage{longtable}
 \usepackage{floatrow}
+\usepackage{makecell}
 
 % Use \setminted here to get horizontal line above and below listings
 \usepackage{minted}
