--- a/Docs/UserGuide/conventions.tex
+++ b/Docs/UserGuide/conventions.tex
@@ -735,6 +735,9 @@ structure of this node is shown in Listing \ref{lst:fx_option_conventions}.
   <Id> </Id> 
   <AtmType> </AtmType> 
   <DeltaType> </DeltaType> 
+  <SwitchTenor> </SwitchTenor>
+  <LongTermAtmType> </LongTermAtmType>
+  <LongTermDeltaType> </LongTermDeltaType>
 </FxOption> 
 \end{minted} 
 \caption{FX option conventions} 
@@ -747,7 +750,13 @@ The meanings of the various elements in this node are as follows:
 \item AtmType: Convention of ATM option quote (Choices are {\em AtmNull, AtmSpot, AtmFwd, 
 AtmDeltaNeutral, AtmVegaMax, AtmGammaMax, AtmPutCall50}). 
 \item DeltaType: Convention of Delta option quote (Choices are {\em Spot, Fwd, PaSpot, 
-PaFwd}). 
+    PaFwd}).
+\item SwitchTenor [Optional]: If given, different ATM and Delta conventions will be used if the option tenor is > switch
+  tenor
+\item LongTermAtmType [Mandatory if and only if SwitchTenor is given]: ATM type to use for options with tenor > switch
+  point, if SwitchTenor is given
+\item LongTermDeltaType [Mandatory if and only if SwitchTenor is given]: Delta type to use for options with tenor >
+  switch point, if SwitchTenor is given
 \end{itemize} 
 
 %- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
