update docs for eq dividend

--- a/Docs/UserGuide/tradecomponents/equityleg.tex
+++ b/Docs/UserGuide/tradecomponents/equityleg.tex
@@ -23,7 +23,7 @@ Allowable values: See \lstinline!Name! for equity trades in Table \ref{tab:equit
 \item Underlying:  This node may be used as an alternative to the \lstinline!Name! node to specify the underlying equity. This in turn defines the equity curve used for pricing. The \lstinline!Underlying! node is described in further detail in Section \ref{ss:underlying}. \\
 
 \item InitialPrice [Optional]: Initial Price of the equity, if not present, the first valuation date is used to
-  determine the initial price. The Initial price can be either given in the currency of the equity or in the leg
+  determine the initial price. If InitialPrice is zero then each coupon's price is just the discounted fixing from the coupon's FixingEndDate. For any divisions we assume the value is one, i.e. when NotionalReset = true we have instead Quantity = Notional. The Initial price can be either given in the currency of the equity or in the leg
   currency, see InitialPriceCurrency.
 
 Allowable values: Any positive real number
