--- a/Docs/UserGuide/userguide.tex
+++ b/Docs/UserGuide/userguide.tex
@@ -4846,7 +4846,8 @@ Listing \ref{lst:eqcurve_configuration} shows the configuration of equity forwar
 \end{longlisting}
 
 The equity curves here consists of a spot equity price, as well as a set of either forward prices or else dividend 
-yields. Upon construction, ORE stores internally an equity spot price quote, a forecasting curve and a dividend yield 
+yields. If the index is a dividend futures index then curve type should be entered as ForwardDividendPrice. In this case the curve will be built from forward prices as normal, but excluded from the SIMM calculations as required by the SIMM methodology.
+Upon construction, ORE stores internally an equity spot price quote, a forecasting curve and a dividend yield 
 term structure, which are then used together for projection of forward prices.
 
 \subsubsection{Equity Volatility Structures}
