--- a/Docs/UserGuide/tradedata/equityforward.tex
+++ b/Docs/UserGuide/tradedata/equityforward.tex
@@ -13,6 +13,7 @@ Listing \ref{lst:eqfwd_data}.
   <Name>RIC:.SPX</Name>
   <Currency>USD</Currency>
   <Strike>2147.56</Strike>
+  <StrikeCurrency>USD</StrikeCurrency>
   <Quantity>17000</Quantity>
 </EquityForwardData>
 \end{minted}
@@ -35,6 +36,8 @@ The meanings and allowable values of the elements in the \lstinline!EquityForwar
 	Allowable values:  See \lstinline!Currency! in Table \ref{tab:allow_stand_data}.	
 	\item Strike: The agreed buy/sell price of the equity forward. \\
 	Allowable values:  Any positive real number.	
+	\item StrikeCurrency: The currency of the strike value. \\
+	Allowable values:  See \lstinline!Currency! and \lstinline!Minor Currencies! in Table \ref{tab:allow_stand_data}.	
 	\item Quantity: The number of units of the underlying equity to be bought/sold. \\
 	Allowable values:  Any positive real number.
 \end{itemize}
