--- a/Docs/UserGuide/tradedata/equityforward.tex
+++ b/Docs/UserGuide/tradedata/equityforward.tex
@@ -33,7 +33,7 @@ The meanings and allowable values of the elements in the \lstinline!EquityForwar
 	Allowable values:  See \lstinline!Name! for equity trades in Table \ref{tab:equity_credit_data}. \\
 	\item Underlying:  This node may be used as an alternative to the \lstinline!Name! node to specify the underlying equity. This in turn defines the equity curve used for pricing. The \lstinline!Underlying! node is described in further detail in Section \ref{ss:underlying}. \\
 	\item Currency: The  currency of the equity forward. \\
-	Allowable values:  See \lstinline!Currency! in Table \ref{tab:allow_stand_data}.	
+	Allowable values:  See \lstinline!Currency! and \lstinline!Minor Currencies! in Table \ref{tab:allow_stand_data}.	
 	\item Strike: The agreed buy/sell price of the equity forward. \\
 	Allowable values:  Any positive real number.	
 	\item StrikeCurrency: The currency of the strike value. \\
