--- a/Docs/UserGuide/tradedata/equityoption.tex
+++ b/Docs/UserGuide/tradedata/equityoption.tex
@@ -24,6 +24,7 @@ an example \lstinline!EquityOptionData! node for an equity option is shown in Li
     <Name>RIC:.SPX</Name>
     <Currency>USD</Currency>
     <Strike>2147.56</Strike>
+    <StrikeCurrency>USD</StrikeCurrency>
     <Quantity>17000</Quantity>
 </EquityOptionData>
 \end{minted}
@@ -59,9 +60,11 @@ The meanings and allowable values of the elements in the \lstinline!EquityOption
 	Allowable values:  See \lstinline!Name! for equity trades in Table \ref{tab:equity_credit_data}. \\
 	\item Underlying:  This node may be used as an alternative to the \lstinline!Name! node to specify the underlying equity. This in turn defines the equity curve used for pricing. The \lstinline!Underlying! node is described in further detail in Section \ref{ss:underlying}. \\
 	\item Currency: The currency of the equity option. \\
-	Allowable values:  See \lstinline!Currency! in Table \ref{tab:allow_stand_data}.	
+	Allowable values:  See \lstinline!Currency! and \lstinline!Minor Currencies! in Table \ref{tab:allow_stand_data}.	
 	\item Strike: The option strike price.\\
 	Allowable values:  Any positive real number.	
+	\item StrikeCurrency: The currency of the equity option. \\
+	Allowable values:  See \lstinline!Currency! and \lstinline!Minor Currencies! in Table \ref{tab:allow_stand_data}.	
 	\item Quantity: The number of units of the underlying covered by the transaction. \\
 	Allowable values:  Any positive real number.
 \end{itemize}
