--- a/Docs/UserGuide/tradecomponents/legdatanotionals.tex
+++ b/Docs/UserGuide/tradecomponents/legdatanotionals.tex
@@ -51,7 +51,7 @@ Allowable values:  \emph{true, false}
 
 \item Currency: The currency of the leg. 
 
-Allowable values:  See \lstinline!Currency! in Table \ref{tab:allow_stand_data}.
+Allowable values:  See \lstinline!Currency! in Table \ref{tab:allow_stand_data}. When \lstinline!LegType! is \emph{Equity}, \lstinline!Minor Currencies! in Table \ref{tab:allow_stand_data} are also allowable.
 
 \item PaymentConvention: The payment convention of the leg coupons. 
 
