--- a/Docs/UserGuide/conventions.tex
+++ b/Docs/UserGuide/conventions.tex
@@ -55,7 +55,7 @@ deduced. The node for a zero rate quote with an explicit maturity date is shown 
 
 The meanings of the various elements in this node are as follows:
 \begin{itemize}
-\item €TenorBased€: True if the conventions are for a tenor based zero quote and False if they are
+\item TenorBased: True if the conventions are for a tenor based zero quote and False if they are
 for a zero quote with an explicit maturity date.
 \item DayCounter: The day count basis associated with the zero rate quote (for choices see section
 \ref{sec:allowable_values})
