--- a/Docs/UserGuide/tradedata/equityoption.tex
+++ b/Docs/UserGuide/tradedata/equityoption.tex
@@ -63,7 +63,7 @@ The meanings and allowable values of the elements in the \lstinline!EquityOption
 	Allowable values:  See \lstinline!Currency! and \lstinline!Minor Currencies! in Table \ref{tab:allow_stand_data}.	
 	\item Strike: The option strike price.\\
 	Allowable values:  Any positive real number.	
-	\item StrikeCurrency: The currency of the equity option. \\
+	\item StrikeCurrency: [Optional] The currency of the equity option. \\
 	Allowable values:  See \lstinline!Currency! and \lstinline!Minor Currencies! in Table \ref{tab:allow_stand_data}.	
 	\item Quantity: The number of units of the underlying covered by the transaction. \\
 	Allowable values:  Any positive real number.
