[touch:1188] update docs

--- a/Docs/UserGuide/tradedata/equityforward.tex
+++ b/Docs/UserGuide/tradedata/equityforward.tex
@@ -36,7 +36,7 @@ The meanings and allowable values of the elements in the \lstinline!EquityForwar
 	Allowable values:  See \lstinline!Currency! and \lstinline!Minor Currencies! in Table \ref{tab:allow_stand_data}.	
 	\item Strike: The agreed buy/sell price of the equity forward. \\
 	Allowable values:  Any positive real number.	
-	\item StrikeCurrency: [Optional] The currency of the strike value. \\
+	\item StrikeCurrency: [Optional] The currency of the strike value. Defaults to \lstinline!Currency! field \\
 	Allowable values:  See \lstinline!Currency! and \lstinline!Minor Currencies! in Table \ref{tab:allow_stand_data}.	
 	\item Quantity: The number of units of the underlying equity to be bought/sold. \\
 	Allowable values:  Any positive real number.
