--- a/Docs/UserGuide/allowablevalues.tex
+++ b/Docs/UserGuide/allowablevalues.tex
@@ -32,6 +32,44 @@
   \label{tab:allow_stand_data}
 \end{table}
 
+\newpage
+
+%\begin{table}[H]
+%\centering
+%\begin{tabular}{|l|p{6cm}|}
+\begin{longtable}{| p{.23\textwidth} | p{.80\textwidth} |}
+\hline
+\multicolumn{2}{|l|}{\lstinline!Rule!}                    \\ \hline
+\textbf{Allowable Values}                   & \textbf{Effect}                       \\ \hline
+\emph{Backward}   &   Backward from termination date to effective date.   \\ \hline
+\emph{Forward}   &   Forward from effective date to termination date.  \\ \hline
+\emph{Zero}   &   No intermediate dates between effective date and termination date.  \\ \hline
+\emph{ThirdWednesday}   &   All dates but effective date and
+                          termination date are taken to be on the
+                          third Wednesday of their month (with forward calculation.) \\ \hline
+\emph{ThirdThursday}   &   All dates but effective date and
+                          termination date are taken to be on the
+                          third Thursday of their month (with forward calculation.) \\ \hline
+\emph{ThirdFriday}   &   All dates but effective date and
+                          termination date are taken to be on the
+                          third Friday of their month (with forward calculation.) \\ \hline
+\emph{MondayAfterThird-} 
+\emph{Friday}  &   All dates but effective date and
+                          termination date are taken to be on the
+                          Monday following the third Friday of their month (with forward calculation.) \\ \hline
+\emph{TuesdayAfterThird-}
+\emph{Friday}   &   All dates but effective date and
+                          termination date are taken to be on the
+                          Tuesday following the third Friday of their month (with forward calculation.) \\ \hline
+\emph{Twentieth}   &   All dates but the effective date are taken to be the twentieth of their month (used for CDS schedules in emerging markets.)  The termination date is also modified. \\ \hline
+\emph{TwentiethIMM}   &   All dates but the effective date are  taken to be the twentieth of an IMM month (used for CDS schedules.)  The termination date is also modified. \\ \hline
+\emph{OldCDS}   &   Same as TwentiethIMM with unrestricted date ends and long/short stub coupon period (old CDS convention).\\ \hline
+CDS   &    \makecell[tl]{Credit derivatives standard rule defined in 'Big Bang' changes in 2009. \\ \\ For quarterly periods (\lstinline!Tenor! set to \emph{3M}): \\ Dates fall on 20th of March, June, September, December. A \emph{Following} \\ roll convention will be applied if the 20th falls on a non-business day. \\ If the \lstinline!EndDate! in the schedule is set to a date beyond the rolled \\ quarterly CDS date, the actual trade termination date will be on the \\ following quarterly CDS date. \\ \\ For monthly periods (\lstinline!Tenor! set to \emph{1M}): \\ Dates fall on 20th of each month, but the termination is still adjusted \\ to be in line with quarterly periods. \\ If the \lstinline!EndDate! in the schedule is set to a date beyond the rolled \\ quarterly CDS date (i.e. the 20th+roll Mar, Jun, Sep, Dec), \\ the actual termination date will be on the following quarterly CDS \\ date, possibly causing a long final stub.}\\ \hline
+CDS2015   &    \makecell[tl]{Credit derivatives standard rule updated in 2015. \\ Same as  \emph{CDS} but with termination dates adjusted to \\ 20th June and 20th December. \\ For schedule \lstinline!EndDates!  from the 20th of March to the 19th September, \\ both included, the termination date will fall on the 20th June (with \\  \emph{Following} roll). \\ For schedule \lstinline!EndDates! from the 20th September to the 19th March, \\ both included, the termination date will fall on the 20th December \\ (with \emph{Following} roll).} \\ \hline
+  \caption{Allowable Values for Rule}
+  \label{tab:rule}
+  \end{longtable}
+
 \begin{longtable}{| p{.30\textwidth} | p{.70\textwidth} |}
     \hline
     \multicolumn{2}{|l|} {\tt Calendar}  \\ \hline
