removed acadia-specific references from FX Index in allowable values

--- a/Docs/UserGuide/allowablevalues.tex
+++ b/Docs/UserGuide/allowablevalues.tex
@@ -274,12 +274,7 @@ Overnight indices    &   0, except for the Overnight indices below:  \\ \hline
 \multicolumn{2}{|l|}{\tt FX Index}   \\ \hline
 \textbf{Index Format} &\textbf{Allowable Values}     \\ \hline
 FX-SOURCE-CCY1-CCY2    &    
-SOURCE is ECB (European Central Bank) for EUR pairs or TR20H (Thomson
-Reuters 20H) for USD pairs. For ECB CCY1 should always be EUR, and for
-TR20H CCY1 should always be USD, except for FX-TR20H-GBP-USD,
-FX-TR20H-AUD-USD and FX-TR20H-NZD-USD. Note that the FX- part of the
-string stays constant for all currency pairs. For the USD-EUR pair, ECB is used
-(FX-ECB-EUR-USD).\\ \hline
+The FX- part of the string stays constant for all currency pairs. SOURCE is the market data fixing source defined in the market configuration. CCY1 and CCY2 are the ISO currency codes of the fx pair. Fixings are expressed as amount in CCY2 for one unit of CCY1.\\ \hline
 \end{tabular}
   \caption{Allowable values for FX index fixings.}
   \label{tab:fxindex_data}
