--- a/Docs/UserGuide/userguide.tex
+++ b/Docs/UserGuide/userguide.tex
@@ -2563,6 +2563,7 @@ type can be (so far) in
 \item npv
 \item cashflow
 \item additionalResults
+\item todaysMarketCalibration
 \item curves
 \item simulation
 \item xva
@@ -2598,12 +2599,16 @@ the list above.
     <Parameter name="active">Y</Parameter>
     <Parameter name="outputFileName">additional\_results.csv</Parameter>
   </Analytic> 
+  <Analytic type="todaysMarketCalibration">
+    <Parameter name="active">Y</Parameter>
+    <Parameter name="outputFileName">todaysmarketcalibration.csv</Parameter>
+  </Analytic>
   <Analytic type="...">
     <!-- ... -->
   </Analytic>      
 </Analytics>      
 \end{minted}
-\caption{ORE analytics: npv, cashflow and curves}
+\caption{ORE analytics: npv, cashflow, curves, additional results, todays market calibratino}
 \label{lst:ore_analytics}
 \end{listing}
 
@@ -2670,6 +2675,9 @@ example\_swaption & vega & double & 309237709.5 \\
 \label{additionalreport}
 \end{center}
 \end{table}
+
+The todaysMarketCalibration analytic writes a report containing information on the build of the t0 market.
+
 \medskip The purpose of the {\tt simulation} 'analytics' is to run a Monte Carlo simulation which evolves the market as
 specified in the simulation config file. The primary result is an NPV cube file, i.e. valuations of all trades in the
 portfolio file (see section Setup), for all future points in time on the simulation grid and for all paths. Apart from
