added that xccy swap notionalss must be matching

--- a/Docs/UserGuide/tradecomponents/legdatanotionals.tex
+++ b/Docs/UserGuide/tradecomponents/legdatanotionals.tex
@@ -122,7 +122,8 @@ An initial exchange, a final exchange
 and an amortising exchange can be specified using an \lstinline!Exchanges! child element with \break
 \lstinline!NotionalInitialExchange!, \lstinline!NotionalFinalExchange! and \break
 \lstinline!NotionalAmortizingExchange! as subelements, see Listing
-\ref{lst:notional_exchange}. The \lstinline!Exchanges! element is typically used in cross-currency swaps and inflation swaps, but can also be used in other trade and leg types.
+\ref{lst:notional_exchange}. The \lstinline!Exchanges! element is typically used in cross-currency swaps and inflation swaps, but can also be used in other trade and leg types. Note that for cross-currency swaps, the \lstinline!NotionalInitialExchange! must be set to the same value on both legs. The \lstinline!NotionalFinalExchange! must also be set to the same value on both legs, i.e. \emph{true} on both, or \emph{false} on both.
+
 
 Allowable values for \lstinline!NotionalInitialExchange!,  \lstinline!NotionalFinalExchange! and \lstinline!NotionalAmortizingExchange!:   \emph{true, false}. Defaults to  \emph{false} if omitted, or if the entire \lstinline!Exchanges! block is omitted.
 
